# TodoApp

./: .env  README.md  database.note.md  database.py  main.py  pyproject.toml  requirements.txt  todos.db  todosApp.db
config/: load_dotenv.py
models/: models.py
routers/: admin.py  auth.py  todos.py  users.py
